...
              background: Container(
                color: Theme.of(context).scaffoldBackgroundColor,
              ),
              titlePadding: const EdgeInsets.only(left: 12, bottom: 12),
              title: Text(
                key: const Key('my_lists_title'),
                'My Lists',
                style: Theme.of(context).textTheme.headlineSmall,
              ),
            ),
            actions: const [
              UserInfo(),
            ],
...
            ),
          ),
          SliverList(
            delegate: SliverChildListDelegate([
              _buildWatchlistSection(
                  context, 'My Watchlists', state.ownWatchlists, true),
              _buildWatchlistSection(context, 'Followed Watchlists',
                  state.followedWatchlists, false),
            ]),
          ),
        ],
      );
    } else if (state is MyListsError) {
...
